--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -4,15 +4,23 @@
     <body>
         <%- include('../includes/navigation.ejs') %>
 
-        <main>
-             <% if(products.length > 0){ %>   
-                <ul>
-                <% products.forEach(p => { %>
-                     <li><%= p.productData.title %> (<%= p.qty %>)  </li>  
-                <% }) %>
-                </ul>
-             <% }else{ %>
-                <h1> No Products in Cart </h1>
-             <% } %>
-        </main>
-        <%- include('../includes/end.ejs') %>
+            <main>
+                <% if(products.length > 0){ %>
+                    <ul>
+                        <% products.forEach(p => { %>
+                            <li>
+                                <p>
+                                    <%= p.productData.title %> (
+                                        <%= p.qty %>)
+                                            <form action="/cart-delete-item" method="POST">
+                                                <input type="hidden" value="<%= p.productData.id %>" name="productId"> <button class="btn" type="submit">Delete</button>
+                                            </form>
+                                </p>
+                            </li>
+                            <% }) %>
+                    </ul>
+                    <% }else{ %>
+                        <h1> No Products in Cart </h1>
+                        <% } %>
+            </main>
+            <%- include('../includes/end.ejs') %>
