up till module 11  vid 157

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -49,6 +49,14 @@ form {
     display: flex;
 }
 
+.image {
+    height: 20rem;
+}
+
+image img {
+    height: 100%;
+}
+
 .main-header__item {
     margin: 0 1rem;
     padding: 0;
