--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -23,7 +23,7 @@
             <div class="form-control">
                 <label for="description">Description</label>
                 <textarea name="description" id="description" rows="5">
-                <% if(editing){%><%= product.description %><% } %>
+                <% if(editing){%><%= product.description %><% }else{ %><%} %>
                 </textarea>
             </div>
 
