--- a/views/shop/orders.ejs
+++ b/views/shop/orders.ejs
@@ -13,9 +13,9 @@
              <li class='order'>
              <h1 class="order-id">Order - # <%= order._id %></h1>
                 <ul class="order-item"> 
-                <% order.items.forEach(product => { %>
+                <% order.products.forEach(p => { %>
                     <li class='order-item-detail'> 
-                     <span class='order-item-title'><%= product.title %></span> <span class="order-item-qty"> Qty:<%= product.quantity %></span>
+                     <span class='order-item-title'><%= p.productData.title %></span> <span class="order-item-qty"> Qty:<%= p.quantity %></span>
                     </li>
                 <% }) %>
                 </ul>
