pre assigment 5. ref 239

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -38,8 +38,10 @@ form {
 
 .main-header__nav {
     height: 100%;
+    /* width: 100%; */
     display: none;
     align-items: center;
+    /* justify-content: space-between; */
 }
 
 .main-header__item-list {
@@ -212,6 +214,8 @@ image img {
 @media (min-width: 768px) {
     .main-header__nav {
         display: flex;
+        width: 100%;
+        justify-content: space-between;
     }
     #side-menu-toggle {
         display: none;
