--- a/views/shop/product-detail.ejs
+++ b/views/shop/product-detail.ejs
@@ -11,6 +11,8 @@
               <h2><%= product.price %></h2>
               <p><%= product.description %></p>
             </div>
+            <% if(isAuthenticated){%>
             <%- include('../includes/add-to-cart') %>
+            <% } %>
         </main>
         <%- include('../includes/end.ejs') %>
