--- a/views/includes/add-to-cart.ejs
+++ b/views/includes/add-to-cart.ejs
@@ -1,4 +1,4 @@
-<form action="/cart" method="post">
+<form action="/cart" method="post" style='margin-top:10px'>
               <button class="btn" type="submit">Add To Cart</button>
               <input type="hidden" name="productId" value="<%= product._id %>">
             </form>
