--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -13,8 +13,7 @@
                         <%= errorMessage %>
                     </div>
                     <% } %>
-
-                        <form class="login-form" action="/login" method="POST">
+                        <form class="login-form" action="/signup" method="POST">
                             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                             <div class="form-control">
                                 <label for="email">E-mail</label>
@@ -24,9 +23,13 @@
                                 <label for="password">Password</label>
                                 <input type="password" name="password" id="password">
                             </div>
+                            <div class="form-control">
+                                <label for="confirmPassword"> Confirm Password</label>
+                                <input type="password" name="confirmPassword" id="confirmPassword">
+                            </div>
 
 
-                            <button class="btn" type="submit">Login</button>
+                            <button class="btn" type="submit">Sign Up</button>
 
                         </form>
             </main>
