--- a/views/includes/add-to-cart.ejs
+++ b/views/includes/add-to-cart.ejs
@@ -1,4 +1,5 @@
 <form action="/cart" method="post" style='margin-top:10px'>
+              <input type="hidden" name="_csrf" value="<%= csrfToken %>" >
               <button class="btn" type="submit">Add To Cart</button>
               <input type="hidden" name="productId" value="<%= product._id %>">
             </form>
