--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -32,9 +32,13 @@
                 <li class="main-header__item">
                     <a class="<%= path === '/login' ? 'active' : '' %>" href="/login"> Login</a>
                 </li>
+                 <li class="main-header__item">
+                    <a class="<%= path === '/signup' ? 'active' : '' %>" href="/signup"> Signup</a>
+                </li>
                 <% } else { %>
                     <li class="main-header__item">
                         <form action="/logout" method="post">
+                            <input type="hidden" name="_csrf" value="<%= csrfToken %>" >  
                             <button type='submit'>Logout</button>
                         </form>
                     </li>
@@ -78,9 +82,14 @@
                 <a class="<%= path === '/login' ? 'active' : '' %>" href="/login">Login
                     </a>
             </li>
+            <li class="mobile-nav__item">
+                <a class="<%= path === '/signup' ? 'active' : '' %>" href="/signup">Signup
+                    </a>
+            </li>
             <% }else{ %>
                 <li class="mobile-nav__item">
                     <form action="/logout" method="post">
+                    <input type="hidden" name="_csrf" value="<%= csrfToken %>" > 
                         <button class="btn" type='submit'>Logout</button>
                     </form>
                 </li>
