Added authoriztion and password reset mod 16 fin

--- a/views/shop/product-list.ejs
+++ b/views/shop/product-list.ejs
@@ -6,6 +6,11 @@
         <%- include('../includes/navigation.ejs') %>
 
             <main>
+                <% if(message){%>
+                    <div class="user-message user-message--success">
+                        <%= message %>
+                    </div>
+                    <% } %>
                 <% if (products.length > 0) { %>
                     <div class="grid">
                         <% for (let product of products) { %>
