--- a/views/auth/new-password.ejs
+++ b/views/auth/new-password.ejs
@@ -14,23 +14,21 @@
                     </div>
                     <% } %>
 
-                        <form class="login-form" action="/login" method="POST">
+                        <form class="login-form" action="/new-password" method="POST">
                             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+                            <input type="hidden" name="userId" value="<%= userId %>">
+                            <input type="hidden" name="passwordToken" value="<%= passwordToken %>">
+                            
+                            
                             <div class="form-control">
-                                <label for="email">E-mail</label>
-                                <input type="email" name="email" id="email">
-                            </div>
-                            <div class="form-control">
-                                <label for="password">Password</label>
+                                <label for="password">Passsword</label>
                                 <input type="password" name="password" id="password">
                             </div>
 
 
-                            <button class="btn" type="submit">Login</button>
+                            <button class="btn" type="submit">Update Password</button>
 
                         </form>
-                        <div class="centered">
-                            <a href="/reset">Reset Password</a>
-                        </div>
+                        
             </main>
             <%- include('../includes/end.ejs') %>
