--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -18,11 +18,16 @@
                             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                             <div class="form-control">
                                 <label for="email">E-mail</label>
-                                <input type="email" name="email" id="email">
+                                <input
+                                class=<%= validationErrors.find(e => e.param === 'email')? 'invalid' : '' %>
+                                 type="email" name="email" id="email" value='<%= oldInput.email %>'>
                             </div>
                             <div class="form-control">
                                 <label for="password">Password</label>
-                                <input type="password" name="password" id="password">
+                                <input 
+                                class=<%= validationErrors.find(e => e.param === 'password')? 'invalid' : '' %>
+                                value='<%= oldInput.password %>'
+                                type="password" name="password" id="password">
                             </div>
 
 
