--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -17,15 +17,27 @@
                             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                             <div class="form-control">
                                 <label for="email">E-mail</label>
-                                <input type="email" name="email" id="email">
+                                <input 
+                                class="<%= validationErrors.find(e => e.param === 'email' ) ? 'invalid' : '' %>"
+                                type="email"
+                                 name="email"
+                                  id="email" value='<%= oldInput.email %>'>
                             </div>
                             <div class="form-control">
                                 <label for="password">Password</label>
-                                <input type="password" name="password" id="password">
+                                <input type="password" 
+                                class="<%= validationErrors.find(e => e.param === 'password' ) ? 'invalid' : '' %>"
+                                name="password"
+                                value='<%= oldInput.password %>'
+                                 id="password">
                             </div>
                             <div class="form-control">
                                 <label for="confirmPassword"> Confirm Password</label>
-                                <input type="password" name="confirmPassword" id="confirmPassword">
+                                <input 
+                                class="<%= validationErrors.find(e => e.param === 'confirmPassword' ) ? 'invalid' : '' %>"
+                                type="password" name="confirmPassword" 
+                                value='<%= oldInput.confirmPassword %>'
+                                id="confirmPassword">
                             </div>
 
 
