--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -1,49 +1,47 @@
 <%- include('../includes/head.ejs') %>
     <link rel="stylesheet" href="/css/forms.css">
     <link rel="stylesheet" href="/css/product.css">
-</head>
+    </head>
 
-<body>
-   <%- include('../includes/navigation.ejs') %>
+    <body>
+        <%- include('../includes/navigation.ejs') %>
 
-    <main>
-        <% if(errorMessage){%>
+            <main>
+                <% if(errorMessage){%>
                     <div class="user-message user-message--error">
                         <%= errorMessage %>
                     </div>
                     <% } %>
-        <form class="product-form" action="/admin/<% if(editing){ %>edit-product<% }else{ %>add-product<% } %>" method="POST">
+                        <form class="product-form" action="/admin/<% if(editing){ %>edit-product<% }else{ %>add-product<% } %>" method="POST" enctype="multipart/form-data">
 
-            <input type="hidden" name="_csrf" value="<%= csrfToken %>" >
-            <div class="form-control">
-                <label for="title">Title</label>
-                <input type="text"
-                class="<%= validationErrors.find(e => e.param === 'title')? 'invalid' :'' %>"
-                 name="title" id="title" value="<% if(editing || hasError){%><%= product.title %><% } %>">
-            </div>
-            <div class="form-control">
+                            <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+                            <div class="form-control">
+                                <label for="title">Title</label>
+                                <input type="text" class="<%= validationErrors.find(e => e.param === 'title')? 'invalid' :'' %>" name="title" id="title" value="<% if(editing || hasError){%><%= product.title %><% } %>">
+                            </div>
+                            <!-- <div class="form-control">
                 <label for="imageUrl">Image URL</label>
                 <input type="text" 
                 class="<%= validationErrors.find(e => e.param === 'imageUrl')? 'invalid' :'' %>"
                 name="imageUrl" id="imageUrl" value="<% if(editing || hasError){%><%= product.imageUrl %><% } %>" >
-            </div>
-            <div class="form-control">
-                <label for="price">Price</label>
-                <input type="number"
-                class="<%= validationErrors.find(e => e.param === 'price')? 'invalid' :'' %>"
-                 name="price" id="price" step="0.01" value="<% if(editing || hasError){%><%= product.price %><% } %>">
-            </div>
-            <div class="form-control">
-                <label for="description">Description</label>
-                <textarea name="description" id="description" 
-                class="<%= validationErrors.find(e => e.param === 'description')? 'invalid': '' %>"
-                rows="5"><% if(editing || hasError ){%><%= product.description %><% }else{ %><%} %></textarea>
-            </div>
+            </div> -->
+                            <div class="form-control">
+                                <label for="image">Image</label>
+                                <input type="file" name="image" id="image">
+                            </div>
+                            <div class="form-control">
+                                <label for="price">Price</label>
+                                <input type="number" class="<%= validationErrors.find(e => e.param === 'price')? 'invalid' :'' %>" name="price" id="price" step="0.01" value="<% if(editing || hasError){%><%= product.price %><% } %>">
+                            </div>
+                            <div class="form-control">
+                                <label for="description">Description</label>
+                                <textarea name="description" id="description" class="<%= validationErrors.find(e => e.param === 'description')? 'invalid': '' %>" rows="5"><% if(editing || hasError ){%><%= product.description %><% }else{ %><%} %></textarea>
+                            </div>
 
-            <button class="btn" type="submit"><% if(editing) {%>Update Product<% }else{ %>Add Product<% } %></button>
-            <% if(editing){ %>
-              <input type="hidden" name="productId" value="<%= product._id %>">
-            <% } %>
-        </form>
-    </main>
-<%- include('../includes/end.ejs') %>
+                            <button class="btn" type="submit"><% if(editing) {%>Update Product<% }else{ %>Add Product<% } %></button>
+                            <% if(editing){ %>
+                                <input type="hidden" name="productId" value="<%= product._id %>">
+                                <% } %>
+                        </form>
+            </main>
+            <%- include('../includes/end.ejs') %>
