finsihed adding pagination

--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -35,8 +35,9 @@
                             </section>
                             <% } %>
                     </div>
-                    <% } else { %>
-                        <h1>No Products Found!</h1>
-                        <% } %>
+                    <%- include('../includes/pagination.ejs') %>
+                        <% } else { %>
+                            <h1>No Products Found!</h1>
+                            <% } %>
             </main>
             <%- include('../includes/end.ejs') %>
